--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
+    	<link rel="shortcut icon" href="img/piturkey.png">
         <meta charset="utf-8">
         <title>PiWars Türkiye</title>
     	<meta name="description" content="">
