Fixed capitalization issue

--- a/index.html
+++ b/index.html
@@ -673,8 +673,8 @@ http://www.templatemo.com/tm-508-power
                     <div class="col-md-4 col-sm-12">
                         <ul class="social-icons">
                             <li><a href="#"><img src="img/facebooklogo.png" style="width: 45px; height: 45px"></a></li>
-                            <li><a href="#"><a href="#"><img src="img/twitterlogo.png" style="width: 45px; height: 45px"></a></a></li>
-                            <li><a href="#"><a href="#"><img src="img/linkedinlogo.png" style="width: 45px; height: 45px"></a></a></li>
+                            <li><a href="#"><a href="#"><img src="img/Twitterlogo.png" style="width: 45px; height: 45px"></a></a></li>
+                            <li><a href="#"><a href="#"><img src="img/LinkedInlogo.png" style="width: 45px; height: 45px"></a></a></li>
                             <li><a href="#"><a href="#"><img src="img/instagramlogo.png" style="width: 45px; height: 45px"></a></a></li>
                         </ul>
                     </div>
