sponsor page updated

--- a/htemel/sponsor.html
+++ b/htemel/sponsor.html
@@ -68,7 +68,7 @@
                     <div class="col-md-8 col-md-offset-2">
                         <div class="Yarismabanner-content">
                             <h2>Sponsorlar</h2>
-                            <h3>...... </h3>
+                            <h3> </h3>
                         </div>
                     </div>
                 </div> 
@@ -87,6 +87,9 @@
                             <li>Bir sosyal sorumluluk projesine destek vermiş olacaklardır. </li>
                             <li>Sponsorlarımıza katkılarına orantılı olarak avantajlar sağlanacaktır. </li>
                             </ul>
+                            <br>
+                            <br>
+                            <img src="../img/sponsor.png">
                             </div>
                     </div>
                 </div> 
