--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@ http://www.templatemo.com/tm-508-power
             </div>
         </div>
 
-<video  height="100%" width="100%" autoplay="autoplay" muted="muted" loop="loop" id="myvideo" >
-        <source src="img/maingif.mp4" type="video/mp4">
+        <video  height="100%" width="100%" autoplay="autoplay" muted="muted" loop="loop" id="myvideo" >
+        <source src="img/main.mp4" type="video/mp4">
         </video> 
 
         <div class="intro">
