--- a/index.html
+++ b/index.html
@@ -408,77 +408,12 @@ http://www.templatemo.com/tm-508-power
             </div>
         </section>
 		
-		<section id="schedule" class="page-section" style="margin-bottom: 45px">
+		<section id="schedule" class="page-section">
         	<div class="container">
         		<div class = "row">
                 	<div class="section-heading">
-                		<h1 style="color: #00bbe5;text-align: left"><b>Ajanda</b><h1>
-        				<div class="col-md-6">
-        					<h2 style="margin-bottom: 25px; text-align: center;">Cuma</h2>
-        					<div class="col-md-6">
-        						<ul style="text-align: center; font-size: 25px; ">
-        							<li style="margin-top: 15px; margin-bottom: 15px"><b>9:30</b></li>
-        							<li style="margin-top: 15px; margin-bottom: 15px"><b>10:15</b></li>
-        							<li style="margin-top: 15px; margin-bottom: 15px"><b>10:30</b></li>
-        							<li style="margin-top: 15px; margin-bottom: 15px"><b>11:15</b></li>
-        							<li style="margin-top: 15px; margin-bottom: 15px"><b>12:15</b></li>
-        							<li style="margin-top: 15px; margin-bottom: 15px"><b>13:00</b></li>
-        							<li style="margin-top: 15px; margin-bottom: 15px"><b>13:45</b></li>
-        							<li style="margin-top: 15px; margin-bottom: 15px"><b>14:00</b></li>
-        							<li style="margin-top: 15px; margin-bottom: 15px"><b>14:45</b></li>
-        							<li style="margin-top: 15px; margin-bottom: 15px"><b>15:00</b></li>
-        							<li style="margin-top: 15px; margin-bottom: 15px"><b>15:30</b></li>
-        						</ul>
-        					</div>
-        					<div class="col-md-6">
-        						<ul style="text-align: left; font-size: 25px">
-        							<li style="margin-top: 15px; margin-bottom: 15px">Fusion 360</li>
-        							<li style="margin-top: 15px; margin-bottom: 15px">Ara</li>
-        							<li style="margin-top: 15px; margin-bottom: 15px">Fusion 360</li>
-        							<li style="margin-top: 15px; margin-bottom: 15px">Ara</li>
-        							<li style="margin-top: 15px; margin-bottom: 15px">Yemek</li>
-        							<li style="margin-top: 15px; margin-bottom: 15px">Robot Kodlama</li>
-        							<li style="margin-top: 15px; margin-bottom: 15px">Ara</li>
-        							<li style="margin-top: 15px; margin-bottom: 15px">Robot Kodlama</li>
-        							<li style="margin-top: 15px; margin-bottom: 15px">Ara</li>
-        							<li style="margin-top: 15px; margin-bottom: 15px">Çıkış Konuşması</li>
-        							<li style="margin-top: 15px; margin-bottom: 15px">Çıkış</li>
-        						</ul>
-        					</div>
-        				</div>
-        				<div class="col-md-6" >
-        					<h2 style="margin-bottom: 25px; text-align: center;">Cumartesi</h2>
-        					<div class="col-md-6">
-        						<ul style="text-align: center; font-size: 25px; ">
-        							<li style="margin-top: 15px; margin-bottom: 15px"><b>9:30</b></li>
-        							<li style="margin-top: 15px; margin-bottom: 15px"><b>10:15</b></li>
-        							<li style="margin-top: 15px; margin-bottom: 15px"><b>10:30</b></li>
-        							<li style="margin-top: 15px; margin-bottom: 15px"><b>11:15</b></li>
-        							<li style="margin-top: 15px; margin-bottom: 15px"><b>12:15</b></li>
-        							<li style="margin-top: 15px; margin-bottom: 15px"><b>13:00</b></li>
-        							<li style="margin-top: 15px; margin-bottom: 15px"><b>13:45</b></li>
-        							<li style="margin-top: 15px; margin-bottom: 15px"><b>14:00</b></li>
-        							<li style="margin-top: 15px; margin-bottom: 15px"><b>14:45</b></li>
-        							<li style="margin-top: 15px; margin-bottom: 15px"><b>15:00</b></li>
-        							<li style="margin-top: 15px; margin-bottom: 15px"><b>15:30</b></li>
-
-        						</ul>
-        					</div>
-        					<div class="col-md-6">
-        						<ul style="text-align: left; font-size: 25px">
-        							<li style="margin-top: 15px; margin-bottom: 15px">Fusion 360</li>
-        							<li style="margin-top: 15px; margin-bottom: 15px">Ara</li>
-        							<li style="margin-top: 15px; margin-bottom: 15px">Fusion 360</li>
-        							<li style="margin-top: 15px; margin-bottom: 15px">Ara</li>
-        							<li style="margin-top: 15px; margin-bottom: 15px">Yemek</li>
-        							<li style="margin-top: 15px; margin-bottom: 15px">Robot Kodlama</li>
-        							<li style="margin-top: 15px; margin-bottom: 15px">Ara</li>
-        							<li style="margin-top: 15px; margin-bottom: 15px">Robot Kodlama</li>
-        							<li style="margin-top: 15px; margin-bottom: 15px">Ara</li>
-        							<li style="margin-top: 15px; margin-bottom: 15px">Çıkış Konuşması</li>
-        							<li style="margin-top: 15px; margin-bottom: 15px">Çıkış</li>
-        						</ul>
-        					</div>
+        				<div class="col-md-12">
+        				   <img src="img/PiWarsSchedule.png" style="margin-bottom: 75px">
                 		</div>
                 	</div>
                 </div>
@@ -500,7 +435,7 @@ http://www.templatemo.com/tm-508-power
                 </div>
                 <div class="row">
                     <div class="col-md-6">
-                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScvWsnPJu7egl1QsA0kZbykoSGZTrN2w9gdX5ZRsI_WY6awmg/viewform?embedded=true" width="520" height="1100" frameborder="0" max-height="1100" marginheight="0" marginwidth="0">Loading...</iframe>
+                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScvWsnPJu7egl1QsA0kZbykoSGZTrN2w9gdX5ZRsI_WY6awmg/viewform?embedded=true" width="550" height="450" frameborder="0" max-height="450" marginheight="0" marginwidth="0">Loading...</iframe>
                     </div>
                     <div class="col-md-6">
                         <div id="map">
