--- a/index.html
+++ b/index.html
@@ -408,12 +408,12 @@ http://www.templatemo.com/tm-508-power
             </div>
         </section>
 		
-		<section id="schedule" class="page-section">
+		<section id="schedule" class="page-section" >
         	<div class="container">
         		<div class = "row">
                 	<div class="section-heading">
         				<div class="col-md-12">
-        				   <img src="img/PiWarsSchedule.png" style="margin-bottom: 75px">
+        				   <img src="img/PiWarsSchedule.png" style="width:1200px; height: 840px;" class="image" style="margin-bottom: 75px">
                 		</div>
                 	</div>
                 </div>
