--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ http://www.templatemo.com/tm-508-power
                     <div class="col-md-8 col-md-offset-2">
                         <div class="banner-content">
                             <h6>Raspberry Pi Tabanlı Mobİl Robot Yarışması</h6>
-                            <h2>Pi Wars Türkİye</h2>
+                            <h2>Pİ Wars Türkİye</h2>
                             <h3>24 Mart 2019</h3>
                             <ul class="buttons">
                                 <li>
@@ -86,10 +86,11 @@ http://www.templatemo.com/tm-508-power
                 </div>
             </div>
         </div>
-
-        <video  height="100%" width="100%" autoplay="autoplay" muted="muted" loop="loop" id="myvideo" >
-        <source src="img/main.mp4" type="video/mp4">
-        </video> 
+        <div class="background-video">
+        	<video  height="100%" width="100%" autoplay="autoplay" muted="muted" loop="loop" id="myvideo">
+        		<source src="img/main.mp4" type="video/mp4">
+        	</video> 
+        </div>
 
         <div class="intro">
             <div class="container">
@@ -408,7 +409,7 @@ http://www.templatemo.com/tm-508-power
             </div>
         </section>
 		
-		<section id="schedule" class="page-section" >
+		<section id="schedule" class="page-section" style="margin-top: 0">
         	<div class="container">
         		<div class = "row">
                 	<div class="section-heading">
