--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ http://www.templatemo.com/tm-508-power
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <div class="banner-content">
-                            <h6>Raspberry Pi Tabanlı Mobİl Robot Yarışması</h6>
+                            <h6>Raspberry Pİ Tabanlı Mobİl Robot Yarışması</h6>
                             <h2>Pİ Wars Türkİye</h2>
                             <h3>24 Mart 2019</h3>
                             <ul class="buttons">
@@ -171,7 +171,7 @@ http://www.templatemo.com/tm-508-power
                             <div class="icon">
                                 <img src="img/piwarsturkey.png" alt="" style="width: 75px; height: 75px;"> <!-- PiWars Türkiye adlı başlığın üstündeki resim -->
                             </div>
-                            <h4>PİWars Türkiye</h4>
+                            <h4>PİWars Türkİye</h4>
 
                             <p>Hisar CS takımı PiWars etkinliğini İstanbul’a getirerek Türkiye'deki ilk PiWars etkinliğini düzenleyecektir. Yarışma 24 Mart 2019 tarihinde Hisar Okulları lise binasında gerçekleşecek ve Türkiye çevresinden bütün liselerin katılımına açık olacaktır. Yarışmaya katılmak için Başvur kısmındaki formu doldurmanız gerekmektedir.</p>
                         </div>
@@ -255,7 +255,7 @@ http://www.templatemo.com/tm-508-power
                                                 <div class="icon">
                                                     <img src="img/linefollowing2.png" alt="">
                                                 </div>
-                                                <h4>Line Following</h4>
+                                                <h4>Maze</h4>
                                             </div>
                                         </a>
                                     </li>
@@ -276,7 +276,7 @@ http://www.templatemo.com/tm-508-power
                                             <div class="col-md-6">
                                                 <div class="right-image">
                                                     <div class="primary-button">
-                                                        <a href="htemel/Pinoon.html" target="_parent" rel="nofollow">Detaylı bilgi ve Kurallar</a>
+                                                        <a href="htemel/Pinoon.html" target="_parent" rel="nofollow">Detaylı bİlgİ ve Kurallar</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -295,7 +295,7 @@ http://www.templatemo.com/tm-508-power
                                             <div class="col-md-6">
                                                 <div class="right-image">
                                                      <div class="primary-button">
-                                                        <a href="htemel/ObstacleCourse.html" target="_parent" rel="nofollow">Detaylı bilgi ve Kurallar</a>
+                                                        <a href="htemel/ObstacleCourse.html" target="_parent" rel="nofollow">Detaylı bİlgİ ve Kurallar</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -314,7 +314,7 @@ http://www.templatemo.com/tm-508-power
                                             <div class="col-md-6">
                                                 <div class="right-image">
                                                     <div class="primary-button">
-                                                        <a href="htemel/DuckShoot.html" rel="nofollow">Detaylı bilgi ve Kurallar</a>
+                                                        <a href="htemel/DuckShoot.html" rel="nofollow">Detaylı bİlgİ ve Kurallar</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -333,7 +333,7 @@ http://www.templatemo.com/tm-508-power
                                             <div class="col-md-6">
                                                 <div class="right-image">
                                                     <div class="primary-button">
-                                                        <a href="htemel/ProximityAlert.html" target="_parent" rel="nofollow">Detaylı bilgi ve Kurallar</a>
+                                                        <a href="htemel/ProximityAlert.html" target="_parent" rel="nofollow">Detaylı bİlgİ ve Kurallar</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -345,14 +345,14 @@ http://www.templatemo.com/tm-508-power
                                         <div class="tab-content-services">
                                             <div class="col-md-6">
                                                 <div class="left-text">
-                                                    <h4>Line Following</h4>
-                                                    <p>Line Following görevinde robotunuz beyaz bir yüzey üstündeki siyah çizgiyi takip eder. Çizginin sonuna en hızlı ve üstünde kalarak tamamlayan robot 1. olur. </p>
+                                                    <h4>Maze</h4>
+                                                    <p>Maze görevinde, robotunuz bir labirenti otonom bir şekilde en kısa sürede çözmeye çalışır.</p>
                                                 </div>
                                             </div>
                                             <div class="col-md-6">
                                                 <div class="right-image">
                                                     <div class="primary-button">
-                                                        <a href="htemel/LineFollowing.html" rel="nofollow">Detaylı bilgi ve Kurallar</a>
+                                                        <a href="htemel/LineFollowing.html" rel="nofollow">Detaylı bİlgİ ve Kurallar</a>
                                                     </div>
                                                 </div>
                                             </div>
