--- a/htemel/LineFollowing.html
+++ b/htemel/LineFollowing.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js"> 
     <head>
+        <link rel="shortcut icon" href="img/piturkey.png">
         <meta charset="utf-8">
         <title>PiWars Türkiye</title>
         <meta name="description" content="">
