--- a/index.html
+++ b/index.html
@@ -458,9 +458,9 @@ http://www.templatemo.com/tm-508-power
             <div class= "container">
                 <div class = "row">
                     <div class="section-heading">
-                        <h1 style="color: #00bbe5;text-align: left"><b>Sık Sorulan Sorular</b><h1>
+                        <h1 style="color: #00bbe5;text-align: left"><b>Sıkça Sorulan Sorular</b><h1>
                                 <div class="col-md-6">
-                                        <div class="faqBlock1 ">
+                                	<div class="faqBlock1 ">
                                             <span class="question" style="color:#363e50">Eğitime kimlerin katılması tavsiye edilmektedir?</span>
                                             <span class="answer" style="color:#363e50">Eğitime sadece kendi robotlarını yapmak için yeterli imkana sahip olmayan okulların başvurması teşvik edilmektedir.</span>
                                         </div>
@@ -468,17 +468,18 @@ http://www.templatemo.com/tm-508-power
                                             <span class="question" style="color:#363e50">Eğitime katılmak için önceden bir robotik tecrübesine ihtiyaç var mı?</span>
                                             <span class="answer" style="color:#363e50">Hayır, eğitimdeki herkesin hiçbir şey bilmediği varsayılacaktır. </span>
                                         </div>
-                                </div>
+                                	</div>
+                                
                                 <div class="col-md-6">
-                                    <div class="faqBlock">
+                                	<div class="faqBlock">
                                             <span class="question" style="color:#363e50">Eğitime katılan takımlar kaçar kişiden oluşmalıdır?</span>
                                             <span class="answer" style="color:#363e50">Bir takımın 3 kişiden oluşması hedeflenmektedir.</span>
                                         </div>
                                         <div class="faqBlock">
                                             <span class="question" style="color:#363e50">Eğitime katılmadan sadece yarışmaya katılabilir miyim?</span>
                                             <span class="answer" style="color:#363e50">Tabi ki! </span>
-                                        </div>
-                            </div>
+                           				</div>
+                                </div>
                     </div>
                 </div>
             </div>
@@ -490,33 +491,33 @@ http://www.templatemo.com/tm-508-power
             <div class="sira1">
  			 <div class="foto">
     			<img src="img/liora.jpeg" alt="Snow" style="width:250px; height: 250px;" class="image">
-    			<div class="foto-layer_top">
+    			<!--<div class="foto-layer_top">
                   <div class="text">liora.nasi@ggl.hisarschool.k12.tr</div>
-                </div>
+                </div>-->
                 <center><font size="4">Liora Nasi</font></center>
                 <center><!--Görevin geldiği yer--></center>
   			 </div>
   			 <div class="foto">
    				<img src="img/duncu.jpeg" alt="Snow" style="width:250px; height: 250px;" class="image">
-   				<div class="foto-layer_top">
+   				<!--<div class="foto-layer_top">
                   <div class="text">deniz.uncu@ggl.hisarschool.k12.tr</div>
-                </div>
+                </div>-->
                 <center><font size="4">Deniz Uncu</font></center>
                 <center><!--Görevin geldiği yer--></center>
   			 </div>
   			 <div class="foto">
    				<img src="img/selinoner.jpeg" alt="Snow" style="width: 250px; height: 250px;" class="image">
-   				<div class="foto-layer_top">
+   				<!--<div class="foto-layer_top">
                   <div class="text">selin.oner@ggl.hisarschool.k12.tr</div>
-                </div>
+                </div>-->
                 <center><font size="4">Selin Öner</font></center>
                 <center><!--Görevin geldiği yer--></center>
   			 </div>
   			 <div class="foto">
     			<img src="img/canersoz.jpeg" alt="Snow" style="width: 250px; height: 250px;" class="image">
-    			<div class="foto-layer_top">
+    			<!--<div class="foto-layer_top">
                   <div class="text">can.ersoz@ggl.hisarschool.k12.tr</div>
-                </div>
+                </div>-->
                 <center><font size="4">Can Ersöz</font></center>
                 <center><!--Görevin geldiği yer--></center>
   			 </div>
@@ -525,33 +526,33 @@ http://www.templatemo.com/tm-508-power
 			<div class="sira1">
  			 <div class="foto">
     			<img src="img/batuhan.jpeg" alt="Snow" style="width: 250px; height: 250px;" class="image">
-    			<div class="foto-layer_top">
+    			<!--<div class="foto-layer_top">
                   <div class="textbat">batuhan.bayraktar@ggl.hisarschool.k12.tr</div>
-                </div>
+                </div>-->
                 <center><font size="4">Batuhan Bayraktar</font></center>
                 <center><!--Görevin geldiği yer--></center>
   			 </div>
   			 <div class="foto">
    				<img src="img/emreotay.jpeg" alt="Forest" style="width: 250px; height: 250px;" class="image">
-   				<div class="foto-layer_top">
+   				<!--<div class="foto-layer_top">
                   <div class="text">emre.otay@ggl.hisarschool.k12.tr</div>
-                </div>
+                </div>-->
                 <center><font size="4">Emre Otay</font></center>
                 <center><!--Görevin geldiği yer--></center>
   			 </div>
   			 <div class="foto">
     			<img src="img/nadintamer.jpeg" alt="Mountains" style="width: 250px; height: 250px;" class="image">
-    			<div class="foto-layer_top">
+    			<!--<div class="foto-layer_top">
                   <div class="text">nadin.tamer@ggl.hisarschool.k12.tr</div>
-                </div>
+                </div>-->
                 <center><font size="4">Nadin Tamer</font></center>
                 <center><!--Görevin geldiği yer--></center>
   			 </div>
   			 <div class="foto">
     			<img src="img/canaydin.jpeg" alt="Snow" style="width: 250px; height: 250px;" class="image">
-    			<div class="foto-layer_top">
+    			<!--<div class="foto-layer_top">
                   <div class="text">can.aydin@ggl.hisarschool.k12.tr</div>
-                </div>
+                </div>-->
                 <center><font size="4">Can Aydin</font></center>
                 <center><!--Görevin geldiği yer--></center>
   			 </div>
@@ -560,25 +561,25 @@ http://www.templatemo.com/tm-508-power
 			<div class="sira1">
  			 <div class="foto">
     			<img src="img/ben.jpeg" alt="Snow" style="width: 250px; height: 250px;" class="image">
-    			<div class="foto-layer_top">
+    			<!--<div class="foto-layer_top">
                   <div class="text">emre.cagin@ggl.hisarschool.k12.tr</div>
-                </div>
+                </div>-->
                 <center><font size="4">Emre Çağın</font></center>
                 <center></center>
   			 </div>
   			 <div class="foto">
    				<img src="img/umutolmez.jpeg" alt="Forest" style="width: 250px; height: 250px;" class="image">
-   				<div class="foto-layer_top">
+   				<!--<div class="foto-layer_top">
                   <div class="text">umut.olmez@ggl.hisarschool.k12.tr</div>
-                </div>
+                </div>-->
                 <center><font size="4">Umut Ölmez</font></center>
                 <center></center>
   			 </div>
   			 <div class="foto">
     			<img src="img/yoelkastro.jpeg" alt="Mountains" style="width: 250px; height: 250px;" class="image">
-    			<div class="foto-layer_top">
+    			<!--<div class="foto-layer_top">
                   <div class="text">yoel.kastro@ggl.hisarschool.k12.tr</div>
-                </div>
+                </div>-->
                 <center><font size="4">Yoel Kastro</font></center>
                 <center></center>
   			 </div>
@@ -603,15 +604,15 @@ http://www.templatemo.com/tm-508-power
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 col-sm-12">
-                            <p>Copyright &copy; 2017 Your Company <br> 
+                            <p>Copyright &copy; 2018 HisarCS <br> 
                             <a href="http://www.templatemo.com/tm-508-power">Power Theme</a> by <a href="http://www.html5max.com" target="_parent">HTML5 Max</a></p>
                     </div>
                     <div class="col-md-4 col-sm-12">
                         <ul class="social-icons">
-                            <li><a href="#"><img src="img/facebooklogo.png" style="width: 45px; height: 45px"></a></li>
-                            <li><a href="#"><a href="#"><img src="img/Twitterlogo.png" style="width: 45px; height: 45px"></a></a></li>
-                            <li><a href="#"><a href="#"><img src="img/LinkedInlogo.png" style="width: 45px; height: 45px"></a></a></li>
-                            <li><a href="#"><a href="#"><img src="img/instagramlogo.png" style="width: 45px; height: 45px"></a></a></li>
+                            <li><a href="https://www.facebook.com/hisarcs"><img src="img/facebooklogo.png" style="width: 45px; height: 45px"></a></li>
+                            <li><a href="https://www.facebook.com/hisarcs"><a href="#"><img src="img/Twitterlogo.png" style="width: 45px; height: 45px"></a></a></li>
+                            <!--<li><a href="#"><a href="#"><img src="img/LinkedInlogo.png" style="width: 45px; height: 45px"></a></a></li>-->
+                            <li><a href="https://www.instagram.com/hisarcs/"><a href="#"><img src="img/instagramlogo.png" style="width: 45px; height: 45px"></a></a></li>
                         </ul>
                     </div>
                     <div class="col-md-2 col-md-offset-2 col-sm-12">
