--- a/index2.html
+++ b/index2.html
@@ -66,14 +66,14 @@
       </video> 
     </div>
     <div class="bannerContainer">
-      <h5>Raspberry PI Tabanlı Mobil Robot Yarışması</h5>
-      <h1>PI Wars Türkiye</h1>
+      <h5>Raspberry Pi Tabanlı Mobil Robot Yarışması</h5>
+      <h1>Pi Wars Türkiye</h1>
       <h3>24 Mart 2019</h3>
       <a class="btn btn-primary" href="#apply">Başvur</a>
     </div>
   </div>
-  <div class="container-fluid counterContainer">
-    <div class="row">
+  <div class="container-fluid">
+    <div class="row counterContainer">
       <div class="col-3 col-md-2 offset-md-2">
         <h2 class="row justify-content-center" id="days">24</h2>
         <h4 class="row justify-content-center">Days</h4>
@@ -91,5 +91,50 @@
           <h4 class="row justify-content-center">Seconds</h4>
         </div>
     </div>
+    <div class="row justify-content-center">
+      <div class="col-12 col-md-4 info">
+        <img src="img/piwars.png" class="texticon">
+        <h4>PiWars</h4>
+        <p class="p-4">PiWars, İngiltere Cambridge Üniversitesinde son 4 yıldır düzenlenen uluslararası bir robotik yarışmasıdır. Bu yarışmada katılımcılar Raspberry Pi kullanarak mobil robotlar üretirler. Robotlar yarışmadaki hem otonom hem de uzaktan kumandalı çeşitli görevleri tamamlayarak puan kazanır ve buna göre sıralandırılırlar.</p>
+
+      </div>
+      <div class="col-12 col-md-4 info">
+        <img src="img/piwarsturkey.png" class="texticon">
+        <h4>PiWars Türkiye</h4>
+        <p class="p-4">Hisar CS takımı PiWars etkinliğini İstanbul’a getirerek Türkiye'deki ilk PiWars etkinliğini düzenleyecektir. Yarışma 24 Mart 2019 tarihinde Hisar Okulları lise binasında gerçekleşecek ve Türkiye çevresinden bütün liselerin katılımına açık olacaktır. Yarışmaya katılmak için Başvur kısmındaki formu doldurmanız gerekmektedir.</p>
+      </div>
+      <div class="col-12 col-md-4 info">
+        <img src="img/education.png" class="texticon">
+        <h4>Eğitim</h4>
+        <p class="p-4">PiWars Türkiye etkinliği, yarışmanın yanı sıra bir de eğitim içerecektir. 2 gün sürecek olan eğitimde, yeterli imkanları olmayan okullardan gelen öğrencilere gerekli malzeme sağlanacak ve kendi robotlarını yapmalarına yardım edilecektir. Eğitime katılan takımlar daha sonra yaptıkları robotlarla yarışmaya katılacaktır.</p>
+      </div>
+    </div>
+    <div class="row p-4 justify-content-center">
+      <div class="col-12 col-md-6">
+        <h3 style="color:#333;">Yarismalar</h3>
+        <p>PiWars etkinliğinde hem otonom hem de uzaktan kumandalı görever bulunur. PiWars Türkiye etkinliği için seçtiğimiz görevleri ve kurallarını aşağıda görebilirsiniz.</p>
+        <a href="/GenelKurallar.html" target="_blank" rel="nofollow" class="btn btn-primary">Genel Kurallar ve kısıtlamalar</a> <!-- Genel kuralların yazılması gerekilen site -->
+      </div>
+    </div>
+  </div>
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-6 col-md-2"><img src="img/deneme2.png"></div>
+        <div class="col-6 ">
+          <h4>PiNoon</h4>
+          <p>Pinoon, iki robotun birbirleriyle savaştığı interaktif bir yarışmadır. Amaç diğer robota bağlı balonu, kendi robotunuzdaki iğne ile patlatmaktır.  </p>
+        </div>
+      </div>
+    </div>
+    <!---
+    <div class="row justify-content-center">
+      <div class="col-6 col-md-2">
+        <img src="img/deneme2.png"><br>
+        <h4>PiNoon</h4>
+      </div>
+      <div class="col-10 col-md-6">
+          Pinoon, iki robotun birbirleriyle savaştığı interaktif bir yarışmadır. Amaç diğer robota bağlı balonu, kendi robotunuzdaki iğne ile patlatmaktır.  
+        </div>
+    </div>-->
   </div>
 </body>
