--- a/index2.html
+++ b/index2.html
@@ -72,8 +72,8 @@
       <a class="btn btn-primary" href="#apply">Başvur</a>
     </div>
   </div>
-  <div class="container-fluid">
-    <div class="row counterContainer">
+  <div class="container-fluid" style="text-align: center;">
+    <div class="row counterContainer" >
       <div class="col-3 col-md-2 offset-md-2">
         <h2 class="row justify-content-center" id="days">24</h2>
         <h4 class="row justify-content-center">Days</h4>
@@ -91,38 +91,85 @@
           <h4 class="row justify-content-center">Seconds</h4>
         </div>
     </div>
-    <div class="row justify-content-center">
+    <div class="row justify-content-center infotrio">
       <div class="col-12 col-md-4 info">
         <img src="img/piwars.png" class="texticon">
-        <h4>PiWars</h4>
-        <p class="p-4">PiWars, İngiltere Cambridge Üniversitesinde son 4 yıldır düzenlenen uluslararası bir robotik yarışmasıdır. Bu yarışmada katılımcılar Raspberry Pi kullanarak mobil robotlar üretirler. Robotlar yarışmadaki hem otonom hem de uzaktan kumandalı çeşitli görevleri tamamlayarak puan kazanır ve buna göre sıralandırılırlar.</p>
-
+        <h5>PiWars</h5>
+        <p class="p-4" style="color:#fff;">PiWars, İngiltere Cambridge Üniversitesinde son 4 yıldır düzenlenen uluslararası bir robotik yarışmasıdır. Bu yarışmada katılımcılar Raspberry Pi kullanarak mobil robotlar üretirler. Robotlar yarışmadaki hem otonom hem de uzaktan kumandalı çeşitli görevleri tamamlayarak puan kazanır ve buna göre sıralandırılırlar.</p>
       </div>
       <div class="col-12 col-md-4 info">
         <img src="img/piwarsturkey.png" class="texticon">
-        <h4>PiWars Türkiye</h4>
-        <p class="p-4">Hisar CS takımı PiWars etkinliğini İstanbul’a getirerek Türkiye'deki ilk PiWars etkinliğini düzenleyecektir. Yarışma 24 Mart 2019 tarihinde Hisar Okulları lise binasında gerçekleşecek ve Türkiye çevresinden bütün liselerin katılımına açık olacaktır. Yarışmaya katılmak için Başvur kısmındaki formu doldurmanız gerekmektedir.</p>
+        <h5>PiWars Türkiye</h5>
+        <p class="p-4" style="color:#fff;">Hisar CS takımı PiWars etkinliğini İstanbul’a getirerek Türkiye'deki ilk PiWars etkinliğini düzenleyecektir. Yarışma 24 Mart 2019 tarihinde Hisar Okulları lise binasında gerçekleşecek ve Türkiye çevresinden bütün liselerin katılımına açık olacaktır. Yarışmaya katılmak için Başvur kısmındaki formu doldurmanız gerekmektedir.</p>
       </div>
       <div class="col-12 col-md-4 info">
         <img src="img/education.png" class="texticon">
-        <h4>Eğitim</h4>
-        <p class="p-4">PiWars Türkiye etkinliği, yarışmanın yanı sıra bir de eğitim içerecektir. 2 gün sürecek olan eğitimde, yeterli imkanları olmayan okullardan gelen öğrencilere gerekli malzeme sağlanacak ve kendi robotlarını yapmalarına yardım edilecektir. Eğitime katılan takımlar daha sonra yaptıkları robotlarla yarışmaya katılacaktır.</p>
+        <h5>Eğitim</h5>
+        <p class="p-4" style="color:#fff;">PiWars Türkiye etkinliği, yarışmanın yanı sıra bir de eğitim içerecektir. 2 gün sürecek olan eğitimde, yeterli imkanları olmayan okullardan gelen öğrencilere gerekli malzeme sağlanacak ve kendi robotlarını yapmalarına yardım edilecektir. Eğitime katılan takımlar daha sonra yaptıkları robotlarla yarışmaya katılacaktır.</p>
       </div>
     </div>
     <div class="row p-4 justify-content-center">
       <div class="col-12 col-md-6">
-        <h3 style="color:#333;">Yarismalar</h3>
+        <h3 style="color:#333;">Yarışmalar</h3>
         <p>PiWars etkinliğinde hem otonom hem de uzaktan kumandalı görever bulunur. PiWars Türkiye etkinliği için seçtiğimiz görevleri ve kurallarını aşağıda görebilirsiniz.</p>
-        <a href="/GenelKurallar.html" target="_blank" rel="nofollow" class="btn btn-primary">Genel Kurallar ve kısıtlamalar</a> <!-- Genel kuralların yazılması gerekilen site -->
+        <a href="kurallar/genel.html" target="_blank" rel="nofollow" class="btn btn-primary">Genel Kurallar ve kısıtlamalar</a> <!-- Genel kuralların yazılması gerekilen site -->
       </div>
     </div>
+    <hr>
   </div>
     <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-6 col-md-2"><img src="img/deneme2.png"></div>
-        <div class="col-6 ">
+      <div class="row">
+        <div class="col-6 col-md-1 offset-md-2"><img src="img/deneme2.png"></div>
+        <div class="col-12 col-md-7">
           <h4>PiNoon</h4>
           <p>Pinoon, iki robotun birbirleriyle savaştığı interaktif bir yarışmadır. Amaç diğer robota bağlı balonu, kendi robotunuzdaki iğne ile patlatmaktır.  </p>
+          <a href="kurallar/pinoon.html" target="_blank" rel="nofollow" class="btn btn-secondary">Detaylı Bilgi ve Kurallar</a>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col-6 col-md-1 offset-md-2"><img src="img/obstaclecourse2.png"></div>
+        <div class="col-12 col-md-7">
+          <h4>Obstacle Course</h4>
+          <p>Obstacle course'ta robotunuz engebeli bir parkurdan geçmeye çalışır. Bu parkuru en kısa zamanda tamamlayan en çok puan kazanır.</p>
+          <a href="kurallar/obstacle.html" target="_blank" rel="nofollow" class="btn btn-secondary">Detaylı Bilgi ve Kurallar</a>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col-6 col-md-1 offset-3 offset-md-2"><img src="img/duckshoot2.png"></div>
+        <div class="col-12 col-md-7">
+          <h4>Duck Shoot</h4>
+          <p>Duck Shoot, karşınızdaki hedefleri bir fırlatma mekanizmasıyla vurduğunuz veya yerdeki bir topu iterek hedefleri devirmeye çalıştığınız bir yarışmadır.</p>
+          <a href="kurallar/duck.html" target="_blank" rel="nofollow" class="btn btn-secondary">Detaylı Bilgi ve Kurallar</a>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col-6 col-md-1 offset-md-2"><img src="img/proxalert.png"></div>
+        <div class="col-12 col-md-7">
+          <h4>Proximity Alert</h4>
+          <p>Proximity alert otonom bir görevdir, bir duvara 0.5 metre uzaklıktaki robotunuz, üzerindeki sensörlerle bu duvara çarpmadan olabildiğince yaklaşmaya çalışır.</p>
+          <a href="kurallar/proximity.html" target="_blank" rel="nofollow" class="btn btn-secondary">Detaylı Bilgi ve Kurallar</a>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col-6 col-md-1 offset-md-2"><img src="img/linefollowing2.png"></div>
+        <div class="col-12 col-md-7">
+          <h4>Maze</h4>
+          <p>Maze görevinde, robotunuz bir labirenti otonom bir şekilde en kısa sürede çözmeye çalışır.</p>
+          <a href="kurallar/maze.html" target="_blank" rel="nofollow" class="btn btn-secondary">Detaylı Bilgi ve Kurallar</a>
+        </div>
+      </div>
+      <hr>
+    </div>
+    <div class="container-fluid" style="text-align: center;">
+      <div class="row awards justify-content-center p-4" id="awards">
+        <div class="col-12">
+          <h3>Ödüller</h3>
+          <img src="img/oduller2.png" alt="">
+          <h5>Ödüller en kısa zamanda açıklanacaktır.</h5>
         </div>
       </div>
     </div>
