--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ http://www.templatemo.com/tm-508-power
                                             <div class="col-md-6">
                                                 <div class="left-text">
                                                     <h4>Maze</h4>
-                                                    <p>`</p>
+                                                    <p>Maze görevinde, robotunuz bir labirenti otonom bir şekilde en kısa sürede çözmeye çalışır.</p>
                                                 </div>
                                             </div>
                                             <div class="col-md-6">
