--- a/index2.html
+++ b/index2.html
@@ -91,7 +91,7 @@
           <h4 class="row justify-content-center">Seconds</h4>
         </div>
     </div>
-    <div class="row justify-content-center infotrio">
+    <div class="row justify-content-center darksegment">
       <div class="col-12 col-md-4 info">
         <img src="img/piwars.png" class="texticon">
         <h5>PiWars</h5>
@@ -119,7 +119,7 @@
   </div>
     <div class="container">
       <div class="row">
-        <div class="col-6 col-md-1 offset-md-2"><img src="img/deneme2.png"></div>
+        <div class="col-6 col-md-1 offset-3 offset-md-2" style="text-align:center;"><img src="img/deneme2.png"></div>
         <div class="col-12 col-md-7">
           <h4>PiNoon</h4>
           <p>Pinoon, iki robotun birbirleriyle savaştığı interaktif bir yarışmadır. Amaç diğer robota bağlı balonu, kendi robotunuzdaki iğne ile patlatmaktır.  </p>
@@ -128,7 +128,7 @@
       </div>
       <hr>
       <div class="row">
-        <div class="col-6 col-md-1 offset-md-2"><img src="img/obstaclecourse2.png"></div>
+        <div class="col-6 col-md-1 offset-3 offset-md-2" style="text-align:center;"><img src="img/obstaclecourse2.png"></div>
         <div class="col-12 col-md-7">
           <h4>Obstacle Course</h4>
           <p>Obstacle course'ta robotunuz engebeli bir parkurdan geçmeye çalışır. Bu parkuru en kısa zamanda tamamlayan en çok puan kazanır.</p>
@@ -137,7 +137,7 @@
       </div>
       <hr>
       <div class="row">
-        <div class="col-6 col-md-1 offset-3 offset-md-2"><img src="img/duckshoot2.png"></div>
+        <div class="col-6 col-md-1 offset-3 offset-md-2" style="text-align:center;"><img src="img/duckshoot2.png"></div>
         <div class="col-12 col-md-7">
           <h4>Duck Shoot</h4>
           <p>Duck Shoot, karşınızdaki hedefleri bir fırlatma mekanizmasıyla vurduğunuz veya yerdeki bir topu iterek hedefleri devirmeye çalıştığınız bir yarışmadır.</p>
@@ -146,7 +146,7 @@
       </div>
       <hr>
       <div class="row">
-        <div class="col-6 col-md-1 offset-md-2"><img src="img/proxalert.png"></div>
+        <div class="col-6 col-md-1 offset-3 offset-md-2" style="text-align:center;"><img src="img/proxalert.png"></div>
         <div class="col-12 col-md-7">
           <h4>Proximity Alert</h4>
           <p>Proximity alert otonom bir görevdir, bir duvara 0.5 metre uzaklıktaki robotunuz, üzerindeki sensörlerle bu duvara çarpmadan olabildiğince yaklaşmaya çalışır.</p>
@@ -155,7 +155,7 @@
       </div>
       <hr>
       <div class="row">
-        <div class="col-6 col-md-1 offset-md-2"><img src="img/linefollowing2.png"></div>
+        <div class="col-6 col-md-1 offset-3 offset-md-2" style="text-align:center;"><img src="img/linefollowing2.png"></div>
         <div class="col-12 col-md-7">
           <h4>Maze</h4>
           <p>Maze görevinde, robotunuz bir labirenti otonom bir şekilde en kısa sürede çözmeye çalışır.</p>
@@ -165,23 +165,115 @@
       <hr>
     </div>
     <div class="container-fluid" style="text-align: center;">
-      <div class="row awards justify-content-center p-4" id="awards">
+      <div class="row darksegment justify-content-center p-4" id="awards">
         <div class="col-12">
           <h3>Ödüller</h3>
-          <img src="img/oduller2.png" alt="">
+          <img src="img/oduller2.png" style="max-width:80%;"alt="">
           <h5>Ödüller en kısa zamanda açıklanacaktır.</h5>
         </div>
       </div>
-    </div>
-    <!---
-    <div class="row justify-content-center">
-      <div class="col-6 col-md-2">
-        <img src="img/deneme2.png"><br>
-        <h4>PiNoon</h4>
-      </div>
-      <div class="col-10 col-md-6">
-          Pinoon, iki robotun birbirleriyle savaştığı interaktif bir yarışmadır. Amaç diğer robota bağlı balonu, kendi robotunuzdaki iğne ile patlatmaktır.  
+      <div class="row justify-content-center p-4" id="sponsors">
+        <div class="col-12">
+          <h3 style="color:#333;">Sponsorlar</h3>
+          <h5 style="color:#555;">En kısa zamanda bu sayfada açıklanacaktır.</h5>
+          <br>
+          <a href="" class="btn btn-secondary">PiWars'a nasıl sponsor olabilirim?</a>
         </div>
-    </div>-->
+      </div>
+      <div class="row darksegment justify-content-center p-4" id="schedule">
+        <div class="col-12">
+          <img src="img/PiWarsSchedule.png" style="width:80%;">
+        </div>
+      </div>
+      <div class="row justify-content-center p-4" id="register">
+        <div class="col-12 col-md-8">
+          <h3 style="color:#333;">Başvur</h3><br>
+          <p>PiWars 2019 başvuru formlarına aşağıdan ulaşabilirsiniz. Eğitime katılmak isteyenlerin yarışmaya da katılmaları beklendiği için sadece eğitim formunu doldurmaları yeterlidir. Görevli öğretmen de dahil olmak üzere her takım üyesi için bir form doldurmanız gerektiğini hatırlatmak isteriz. </p>
+          <br>
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScvWsnPJu7egl1QsA0kZbykoSGZTrN2w9gdX5ZRsI_WY6awmg/viewform?embedded=true" width="100%;" max-width="100%" height="450" frameborder="0" max-height="450" marginheight="0" marginwidth="0">Loading...</iframe>
+        </div>
+      </div>
+
+      <div class="row darksegment justify-content-center p-4" style="text-align: left;" id="faq">
+        <h3 style="text-align:center;" class="col-12 p-4">Sıkça Sorulan Sorular</h3>
+        <div class="col-12 col-md-3 mt-4">
+          <h6>Eğitime hangi öğrencilerin katılması tavsiye edilmektedir?</h6>
+          <hr style="border-color: #666;">
+          <p style="color:#eee;">Eğitime sadece kendi robotlarını yapmak için yeterli imkana sahip olmayan okulların başvurması teşvik edilmektedir.</p>
+        </div>
+        <div class="col-12 col-md-3 mt-4">
+          <h6>Eğitime katılmak için önceden bir robotik tecrübesine ihtiyaç var mı?</h6>
+          <hr style="border-color: #666;">
+          <p style=" color:#eee;">Hayır, eğitimdeki herkesin hiçbir şey bilmediği varsayılacaktır.</p>
+        </div>
+        <div class="col-12 col-md-3 mt-4">
+          <h6>Eğitime katılan takımlar kaçar kişiden oluşmalıdır?</h6>
+          <hr style="border-color: #666;">
+          <p style="color:#eee;">Bir takımın 3 kişiden oluşması hedeflenmektedir.</p>
+        </div>
+        <div class="col-12 col-md-3 mt-4">
+          <h6>Eğitime katılmadan sadece yarışmaya katılabilir miyim?</h6>
+          <hr style="border-color: #666;">
+          <p style="color:#eee;">Tabi ki!</p>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row justify-content-center p-4" id="team">
+        <h3 style="color:#333;">Biz Kimiz?</h3>
+      </div>
+      <div class="row justify-content-center p-4">
+        <div class="col-12 col-md-4 p-4">
+          <div class="memberCard">
+            <img src="img/canersoz.jpeg" class="memberPic">
+            <h5 style="color:#555;">Can Ersoz</h5>
+            <h6 style="color:#333;">Bos isler muduru</h6>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 p-4">
+          <div class="memberCard">
+            <img src="img/canersoz.jpeg" class="memberPic">
+            <h5 style="color:#555;">Can Ersoz</h5>
+            <h6 style="color:#333;">Bos isler muduru</h6>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 p-4">
+          <div class="memberCard">
+            <img src="img/canersoz.jpeg" class="memberPic">
+            <h5 style="color:#555;">Can Ersoz</h5>
+            <h6 style="color:#333;">Bos isler muduru</h6>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 p-4">
+          <div class="memberCard">
+            <img src="img/canersoz.jpeg" class="memberPic">
+            <h5 style="color:#555;">Can Ersoz</h5>
+            <h6 style="color:#333;">Bos isler muduru</h6>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 p-4">
+          <div class="memberCard">
+            <img src="img/canersoz.jpeg" class="memberPic">
+            <h5 style="color:#555;">Can Ersoz</h5>
+            <h6 style="color:#333;">Bos isler muduru</h6>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid darksegment justify-content-center" style="text-align:center;">
+      <div class="row">
+        <div class="col-12">
+          <h3>Bize Ulasin</h3>
+        </div>
+        <div class="col-6">
+          <h5>Iletisim</h5>
+          
+        </div>
+        <div class="col-6">
+          <h5>Harita</h5>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3003.1253265148594!2d28.890556715085783!3d41.17543361707134!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cab2efd52f489f%3A0xe7d088ae26b38280!2sHisar+Schools+Culture+Center!5e0!3m2!1sen!2str!4v1537983310756" width="80%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
