done except for fontsize

--- a/index2.html
+++ b/index2.html
@@ -23,11 +23,14 @@
   <link rel="dns-prefetch" href="//fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet">
 
-   <!-- PiWarsTurkey main stylesheet -->
-   <link rel="stylesheet" href="css/style2.css">
+  <!-- Latest Fontawesome CSS -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
 
-   <!-- PiWarsTurkey main script -->
-   <script src="js/main.js"></script>
+  <!-- PiWarsTurkey main stylesheet -->
+  <link rel="stylesheet" href="css/style2.css">
+
+  <!-- PiWarsTurkey main script -->
+  <script src="js/main.js"></script>
 </head>
 <body onload="countDown()">
 <!-- Image and text -->
@@ -261,17 +264,35 @@
       </div>
     </div>
     <div class="container-fluid darksegment justify-content-center" style="text-align:center;">
-      <div class="row">
+      <div class="row p-4">
         <div class="col-12">
           <h3>Bize Ulasin</h3>
         </div>
-        <div class="col-6">
+        <div class="col-12 col-md-6">
           <h5>Iletisim</h5>
           
         </div>
-        <div class="col-6">
+        <div class="col-12 col-md-6">
           <h5>Harita</h5>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3003.1253265148594!2d28.890556715085783!3d41.17543361707134!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cab2efd52f489f%3A0xe7d088ae26b38280!2sHisar+Schools+Culture+Center!5e0!3m2!1sen!2str!4v1537983310756" width="80%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-12 col-md-3 p-4">
+          Copyright &copy 2018 Hisar CS
+        </div>
+        <div class="col-12 col-md-3 p-4">
+          <a href="https://www.facebook.com/hisarcs" class="p-4"><img src="img/facebooklogo.png" style="width: 45px; height: 45px"></a>
+          <a href="https://www.facebook.com/hisarcs" class="p-4"><img src="img/Twitterlogo.png" style="width: 45px; height: 45px"></a>
+          <a href="https://www.instagram.com/hisarcs/" class="p-4"><img src="img/instagramlogo.png" style="width: 45px; height: 45px"></a>
+        </div>
+        <div class="col-12 col-md-3 d-flex flex-column" style="text-align:center;">
+          <a class="back-to-top" href="#">
+            <i class="fa fa-angle-up" style="font-size: 3vw;"></i><br>
+            Back To Top
+          </a>
         </div>
       </div>
     </div>
